# OneMindArmy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
configs/: chess_play.yaml  chess_train.yaml
data/chess/: chess_training_data.bin.meta.json  training_log.jsonl
docs/: chess_encoding.md
scripts/: compile_engine.py  dataset.py  init_v0.py  orchestrator.py  plot_training.py  train.py
src/corelib/: AlignedVec.hpp  AllIncludes.cpp  CMakeLists.txt  main.cpp
src/corelib/bootstrap/: GameConfig.hpp  GameTypeRegistry.hpp  TypeResolver.hpp
src/corelib/handler/inference/: InferenceHandler.hpp
src/corelib/handler/training/: PriorityReplayBuffer.cpp  PriorityReplayBuffer.hpp  TrainingHandler.hpp
src/corelib/handlers/: InferenceHandler.hpp  MetaExportHandler.hpp  SelfPlayHandler.hpp
src/corelib/interfaces/: IEngine.hpp  IHandler.hpp  IRenderer.hpp  IRequester.hpp  ITraits.hpp
src/corelib/model/: BlockingQueue.hpp  GameTypes.hpp  MCTS.hpp  MCTSThreadPool.hpp  NeuralNet.cuh  NeuralNet.hpp  ReplayBuffer.hpp  SearchStrategie.hpp  SearchStrategy.hpp  StateEncoder.hpp  ThreadPool.hpp  TreeSearch.hpp
src/corelib/player/: AIPlayer.hpp  HumanPlayer.hpp  IPlayer.hpp
src/corelib/util/: AlignedVec.hpp  AtomicOps.hpp  CompilerHints.hpp  PovUtils.hpp  Zobrist.hpp
src/games/chess/: CMakeLists.txt  ChessEngine.cpp  ChessEngine.hpp  ChessRegistrar.cpp  ChessRenderer.cpp  ChessRenderer.hpp  ChessRequester.cpp  ChessRequester.hpp  ChessTraits.hpp  ChessTypes.hpp  FenParser.hpp  MoveGenerator.hpp  PerftTool.cpp  PerftTool.hpp  Tables.hpp  UCIHandler.cpp  UCIHandler.hpp  chessConfig.yaml
src/games/tarot/: TarotTraits.hpp  TarotTypes.hpp
